tests/baselines/reference/decoratorsOnComputedProperties.errors.txt
tests/cases/compiler/decoratorsOnComputedProperties.ts(18,5): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/compiler/decoratorsOnComputedProperties.ts(19,8): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/compiler/decoratorsOnComputedProperties.ts(20,8): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/compiler/decoratorsOnComputedProperties.ts(21,5): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/compiler/decoratorsOnComputedProperties.ts(22,8): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/compiler/decoratorsOnComputedProperties.ts(23,8): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/compiler/decoratorsOnComputedProperties.ts(27,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.ts(28,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.ts(29,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.ts(30,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.ts(35,5): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/compiler/decoratorsOnComputedProperties.ts(36,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.ts(37,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.ts(38,5): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/compiler/decoratorsOnComputedProperties.ts(39,5): error TS1206: Decorators are not valid here.
tests/cases/compiler/decoratorsOnComputedProperties.ts(40,5): error TS1206: Decorators are not valid here.


==== tests/cases/compiler/decoratorsOnComputedProperties.ts (16 errors) ====
    function x(o: object, k: PropertyKey) { }
    let i = 0;
    function foo(): string { return ++i + ""; }
    
    const fieldNameA: string = "fieldName1";
    const fieldNameB: string = "fieldName2";
    const fieldNameC: string = "fieldName3";
    
    class A {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
    }
    
    void class B {
        @x ["property"]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.toStringTag]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x ["property2"]: any = 2;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [Symbol.iterator]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
        @x [foo()]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [foo()]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
        @x [fieldNameB]: any;
        ~
!!! error TS1206: Decorators are not valid here.
        @x [fieldNameC]: any = null;
        ~
!!! error TS1206: Decorators are not valid here.
    };
    